--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@mui/material": "^7.3.1",
     "@mui/styled-engine-sc": "^7.3.1",
     "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.11.0",
     "path": "^0.12.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.8.2",
+    "sass": "^1.91.0",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
