--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^7.3.1",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.11.0",
+    "diff2html": "^3.4.52",
     "path": "^0.12.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/diff2html": "^0.0.5",
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
