--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
+    "recharts": "^3.3.0",
     "sass": "^1.91.0",
     "styled-components": "^6.1.19"
   },
