--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.11.0",
     "diff2html": "^3.4.52",
     "path": "^0.12.7",
+    "plantuml-encoder": "^1.4.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
@@ -32,6 +33,7 @@
     "@eslint/js": "^9.33.0",
     "@types/diff2html": "^0.0.5",
     "@types/node": "^24.2.1",
+    "@types/plantuml-encoder": "^1.4.2",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/react-redux": "^7.1.34",
