--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^7.3.1",
     "@mui/styled-engine-sc": "^7.3.1",
     "@reduxjs/toolkit": "^2.8.2",
+    "@viz-js/viz": "^3.20.0",
     "axios": "^1.11.0",
     "diff2html": "^3.4.52",
+    "mermaid": "^11.12.1",
     "path": "^0.12.7",
     "plantuml-encoder": "^1.4.0",
     "react": "^19.1.1",
